--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lit": "^3.1.2"
+    "@lit/task": "^1.0.1",
+    "lit": "^3.1.2",
+    "luxon": "^3.4.4"
   },
   "devDependencies": {
+    "@types/luxon": "^3.4.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
