--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
   },
   "devDependencies": {
     "@types/luxon": "^3.4.2",
+    "@unocss/core": "^0.61.0",
+    "@unocss/preset-attributify": "^0.61.0",
+    "@unocss/preset-typography": "^0.61.0",
+    "@unocss/preset-uno": "^0.61.0",
+    "@unocss/preset-wind": "^0.61.0",
     "typescript": "^5.2.2",
+    "unocss": "^0.61.0",
     "vite": "^5.2.0"
   }
 }
