--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@lit/task": "^1.0.1",
     "lit": "^3.1.2",
-    "luxon": "^3.4.4"
+    "luxon": "^3.4.4",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/luxon": "^3.4.2",
